[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "statecraft"
version = "0.1.0"
description = "Store, manage and remix states for SSMs and other Stateful models"
authors = ["koayon <koayon@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "statecraft"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.19.1"
responses = "^0.13.4"
torch = "2.1.2"
transformers = "4.40.0.dev0"
pydantic = "2.5.3"
Requests = "2.31.0"
typer = "0.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pylint = "^2.17.4"
setuptools = "67.7.2"
