[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "statecraft"
version = "0.3.0"
description = "Store, manage and remix states for SSMs and other Stateful models"
authors = ["koayon <koayon@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "statecraft"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]

[tool.poetry.urls]
Repository = "https://github.com/koayon/statecraft.git"

[tool.poetry.dependencies]
einops= "^0.6.1"
pydantic = "^2.5.3"
python = "^3.8"
python-dotenv = "^0.19.1"
Requests = "^2.31.0"
transformers = "^4.39.3"
typer = "^0.7.0"
accelerate = "^0.29.1"
torch = "^2.2.2"
# causal-conv1d = "^1.2.0"
# mamba-ssm = "^1.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pylint = ">=2.17.4,<4.0.0"
setuptools = "^67.7.2,<70.0.0"
